--- a/.env.testing
+++ b/.env.testing
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=test_database
-DB_USERNAME=root
+DB_USERNAME=laravel
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
