--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,18 @@ services:
     volumes:
       - .:/var/www/html
     environment:
-      - APP_ENV=local
-      - APP_DEBUG=true
-      - DB_CONNECTION=mysql
-      - DB_HOST=db
-      - DB_PORT=3306
-      - DB_DATABASE=laravel
-      - DB_USERNAME=root
-      - DB_PASSWORD=root
+      APP_ENV: local
+      APP_DEBUG: 'true'
+      DB_CONNECTION: mysql
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: laravel
+      DB_USERNAME: root
+      DB_PASSWORD: root
     depends_on:
       - db
+    networks:
+      - laravel_network
 
   db:
     image: mysql:8.0
@@ -34,6 +36,12 @@ services:
       MYSQL_PASSWORD: root
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - laravel_network
 
 volumes:
   db_data:
+
+networks:
+  laravel_network:
+    driver: bridge
