--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: laravel_app
+    container_name: laravel_app_new
     ports:
       - "8000:8000"
     volumes:
@@ -26,7 +26,7 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: laravel_db
+    container_name: laravel_db_new
     ports:
       - "3307:3306"
     environment:
