--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       DB_HOST: db
       DB_PORT: 3306
       DB_DATABASE: laravel
-      DB_USERNAME: root
-      DB_PASSWORD: root
+      DB_USERNAME: laravel
+      DB_PASSWORD: 
     depends_on:
       - db
     networks:
@@ -32,8 +32,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: 
     volumes:
       - db_data:/var/lib/mysql
     networks:
