--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,34 +10,37 @@ services:
       - "8000:8000"
     volumes:
       - .:/var/www/html
+      - ./build:/var/www/html/build # Volume pour capturer les fichiers de résultats des tests
     environment:
-      APP_ENV: local
+      APP_ENV: testing
       APP_DEBUG: 'true'
       DB_CONNECTION: mysql
       DB_HOST: db
       DB_PORT: 3306
-      DB_DATABASE: laravel
-      DB_USERNAME: laravel
-      DB_PASSWORD: 
+      DB_DATABASE: test_database
+      DB_USERNAME: root
+      DB_PASSWORD: root
     depends_on:
       - db
     networks:
       - laravel_network
 
-  db:
-    image: mysql:8.0
-    container_name: laravel_db_new
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: 
-    volumes:
-      - db_data:/var/lib/mysql
-    networks:
-      - laravel_network
+db:
+  image: mysql:8.0
+  container_name: laravel_db_new
+  ports:
+    - "3307:3306"
+  environment:
+    MYSQL_ROOT_PASSWORD: root
+    MYSQL_DATABASE: test_database
+    MYSQL_USER: root
+    MYSQL_PASSWORD: root
+  volumes:
+    - db_data:/var/lib/mysql
+    - ./db-init.sql:/docker-entrypoint-initdb.d/db-init.sql
+  networks:
+    - laravel_network
+
 
 volumes:
   db_data:
