--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,9 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=laravel_user
+DB_PASSWORD=laravel_user
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
