--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,8 +13,8 @@ services:
       DB_HOST: "db"
       DB_PORT: 3306
       DB_DATABASE: "laravel"
-      DB_USERNAME: "laravel_user"
-      DB_PASSWORD: "laravel_user"
+      DB_USERNAME: "root"
+      DB_PASSWORD: ""
     depends_on:
       db:
         condition: service_healthy
@@ -27,10 +27,10 @@ services:
     ports:
       - "3307:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: "root"
+      MYSQL_ROOT_PASSWORD: ""
       MYSQL_DATABASE: "laravel"
-      MYSQL_USER: "laravel_user"
-      MYSQL_PASSWORD: "laravel_user"
+      MYSQL_USER: "root"
+      MYSQL_PASSWORD: ""
     volumes:
       - laravel_db_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/dbp-init.sql
