--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,7 @@ services:
       APP_DEBUG: "false"
       DB_CONNECTION: "mysql"
       DB_HOST: "db"
-      DB_PORT: "3307:3306"
+      DB_PORT: 3306
       DB_DATABASE: "laravel"
       DB_USERNAME: "laravel"
       DB_PASSWORD: "laravel"
@@ -25,7 +25,7 @@ services:
     image: mysql:8.0
     container_name: laravel_db_prod
     ports:
-      - "3307:3306"
+      - 3306
     environment:
       MYSQL_ROOT_PASSWORD: "root"
       MYSQL_DATABASE: "laravel"
